# minazuki

./: Cargo.toml  Makefile  README.md
data/: config.example.toml  system-processes.toml
packaging/: minazuki.service
src/: config.rs  cpufreq.rs  freq.rs  game.rs  main.rs  proc.rs  scx.rs  state.rs  turbo.rs  ui.rs  watcher.rs
src/knob/: cpu.rs  mod.rs
