[package]
name = "minazuki"
version = "0.0.0"
edition = "2024"
license = "MIT"
description = "custom cpu governor daemon with per-game sc(e)x loader"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
libc = "0.2"

[profile.release]
strip = true
lto = true
opt-level = "s"
